<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/minIncrease"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:longClickable="true"
        android:onClick="timerMinIncrease"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/secIncrease"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secIncrease"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:longClickable="true"
        android:onClick="timerSecIncrease"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForTimerUnderConfig"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secIncrease" />

    <Button
        android:id="@+id/minReduce"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:longClickable="true"
        android:onClick="timerMinReduce"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/secReduce"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTimerUnderConfig" />

    <Button
        android:id="@+id/secReduce"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:longClickable="true"
        android:onClick="timerSecReduce"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTimerUnderConfig" />

    <Button
        android:id="@+id/addTimer"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:lines="2"
        android:onClick="addTimerToList"
        android:text="@string/addTimer"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secReduce" />

    <Button
        android:id="@+id/stopTimer"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:onClick="timerStop"
        android:text="@string/stopTimer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTimer" />

    <Button
        android:id="@+id/startTimer"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:onClick="timerStart"
        android:text="@string/startTimer"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopTimer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="156dp"
        android:layout_height="680dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#00BCD4"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>