<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/timerCreateActivityLeftSide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/createTimerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timerCreateActivityRightSide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="14"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_corner_left" >

        <TextView
            android:id="@+id/typeOfTimerUnderConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorBackgroundSecondary"
            android:gravity="start|center_horizontal"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="Start"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/quantico_italic" />

        <TextView
            android:id="@+id/timeOfTimerUnderConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorBackgroundSecondary"
            android:gravity="center"
            android:padding="10dp"
            android:text="00 : 00"
            android:textSize="24sp"

            android:fontFamily="@font/quantico_bold" />

        <TextView
            android:id="@+id/idOfTimerUnderConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorBackgroundSecondary"
            android:gravity="end|center_horizontal"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="2nd lap"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/quantico_italic" />

        <LinearLayout
            android:id="@+id/buttonTimerIncreaseSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/colorBackgroundSecondary" >

            <Button
                android:id="@+id/minIncrease"
                android:onClick="timerMinIncrease"
                style="@style/ButtonConfigureStyle"
                app:backgroundTint="@color/colorBackgroundSecondary"
                app:elevation="0dp"
                app:icon="@drawable/ic_increase"
                app:iconTint="#FFFFFF"
                app:rippleColor="@color/colorButtonRipple"
                app:strokeColor="@color/colorButtonStroke"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/secIncrease"
                android:onClick="timerSecIncrease"
                style="@style/ButtonConfigureStyle"
                app:backgroundTint="@color/colorBackgroundSecondary"
                app:elevation="0dp"
                app:icon="@drawable/ic_increase"
                app:iconTint="#FFFFFF"
                app:rippleColor="@color/colorButtonRipple"
                app:strokeColor="@color/colorButtonStroke"
                app:strokeWidth="1dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonTimerReduceSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/colorBackgroundSecondary" >

            <Button
                android:id="@+id/minReduce"
                android:onClick="timerMinReduce"
                style="@style/ButtonConfigureStyle"
                app:backgroundTint="@color/colorBackgroundSecondary"
                app:elevation="0dp"
                app:icon="@drawable/ic_reduce"
                app:iconTint="#FFFFFF"
                app:rippleColor="@color/colorButtonRipple"
                app:strokeColor="@color/colorButtonStroke"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/secReduce"
                android:onClick="timerSecReduce"
                style="@style/ButtonConfigureStyle"
                app:backgroundTint="@color/colorBackgroundSecondary"
                app:elevation="0dp"
                app:icon="@drawable/ic_reduce"
                app:iconTint="#FFFFFF"
                app:rippleColor="@color/colorButtonRipple"
                app:strokeColor="@color/colorButtonStroke"
                app:strokeWidth="1dp" />

        </LinearLayout>

        <Button
            android:id="@+id/addTimerApplyChange"
            style="@style/ButtonActionStyle"
            android:background="@android:color/transparent"
            android:onClick="addTimerToList"
            android:text="@string/addTimer"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"/>

        <Button
            android:id="@+id/deleteTimer"
            android:onClick="timerDelete"
            android:text="@string/deleteTimer"
            style="@style/ButtonActionStyle"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"/>

        <Button
            android:id="@+id/resetList"
            android:onClick="resetList"
            android:text="@string/resetList"
            style="@style/ButtonActionStyle"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"/>

        <LinearLayout
            android:id="@+id/layoutStartTimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:background="@color/colorBackgroundSecondary" >

            <Button
                android:id="@+id/startTimer"
                style="@style/ButtonStartStyle"
                android:onClick="timerStart"
                android:text="@string/startTimer"
                android:textColor="@color/colorTextPrimary"
                app:rippleColor="@color/colorButtonRipple"
                app:strokeColor="@color/colorTextPrimary"
                app:strokeWidth="1dp" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>

<!--    android:paddingStart="20dp"-->
<!--    android:paddingLeft="20dp"-->
<!--    android:paddingTop="20dp"-->
<!--    android:paddingEnd="20dp"-->
<!--    android:paddingRight="20dp"-->
<!--    android:paddingBottom="20dp"-->
<!--    android:layout_weight="1"-->

<!--    android:background="?android:attr/selectableItemBackground"-->

<!--    app:backgroundTint="@color/mtrl_btn_text_btn_bg_color_selector"-->

<!--<ConstraintLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:gravity="center">-->



<!--</ConstraintLayout>           -->


